# polars-permute-plugin

./: .pre-commit-config.yaml  Justfile  README.md  pyproject.toml  ruff.toml
.github/workflows/: test.yml  tests.yml
src/polars_permute/: __init__.py
tests/: chained_operations_test.py  conftest.py  data_integrity_test.py  move_operation_test.py  multiple_columns_test.py  shift_operations_test.py
