[project]
name = "polars-permute"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Louis Maddox", email = "louismmx@gmail.com" }
]
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
polars = [
    "polars>=1.21.0",
]
polars-lts-cpu = [
    "polars-lts-cpu>=1.21.0",
]
dev = [
    "pytest>=8.3.4",
]

[build-system]
build-backend = "pdm.backend"
requires = ["pdm-backend"]
